M1/Compilation/4TP/parser.automaton
State 0:
prog' -> . prog [ # ]
-- On VAR shift to state 1
-- On PRINT shift to state 4
-- On NOT shift to state 5
-- On NEWLINE shift to state 54
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 56
-- On EXIT shift to state 60
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On BEGIN shift to state 62
-- On prog shift to state 74
-- On list(instr) shift to state 75
-- On instr shift to state 65
-- On expr shift to state 67
-- On const shift to state 31
-- On block shift to state 73
-- On EOF reduce production list(instr) -> 

State 1:
instr -> VAR . IDENT SEMI [ VAR PRINT NOT NEWLINE MINUS LSPAREN LPAREN IF IDENT EXIT EOF END CONST_INT CONST_BOOL BEGIN ]
-- On IDENT shift to state 2

State 2:
instr -> VAR IDENT . SEMI [ VAR PRINT NOT NEWLINE MINUS LSPAREN LPAREN IF IDENT EXIT EOF END CONST_INT CONST_BOOL BEGIN ]
-- On SEMI shift to state 3

State 3:
instr -> VAR IDENT SEMI . [ VAR PRINT NOT NEWLINE MINUS LSPAREN LPAREN IF IDENT EXIT EOF END CONST_INT CONST_BOOL BEGIN ]
-- On VAR reduce production instr -> VAR IDENT SEMI 
-- On PRINT reduce production instr -> VAR IDENT SEMI 
-- On NOT reduce production instr -> VAR IDENT SEMI 
-- On NEWLINE reduce production instr -> VAR IDENT SEMI 
-- On MINUS reduce production instr -> VAR IDENT SEMI 
-- On LSPAREN reduce production instr -> VAR IDENT SEMI 
-- On LPAREN reduce production instr -> VAR IDENT SEMI 
-- On IF reduce production instr -> VAR IDENT SEMI 
-- On IDENT reduce production instr -> VAR IDENT SEMI 
-- On EXIT reduce production instr -> VAR IDENT SEMI 
-- On EOF reduce production instr -> VAR IDENT SEMI 
-- On END reduce production instr -> VAR IDENT SEMI 
-- On CONST_INT reduce production instr -> VAR IDENT SEMI 
-- On CONST_BOOL reduce production instr -> VAR IDENT SEMI 
-- On BEGIN reduce production instr -> VAR IDENT SEMI 

State 4:
instr -> PRINT . expr SEMI [ VAR PRINT NOT NEWLINE MINUS LSPAREN LPAREN IF IDENT EXIT EOF END CONST_INT CONST_BOOL BEGIN ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 52
-- On const shift to state 31

State 5:
expr -> NOT . expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 51
-- On const shift to state 31

State 6:
expr -> MINUS . expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 50
-- On const shift to state 31

State 7:
expr -> LSPAREN . expr RSPAREN [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 48
-- On const shift to state 31

State 8:
expr -> LPAREN . expr RPAREN [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 46
-- On const shift to state 31

State 9:
expr -> IF . expr THEN expr ELSE expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 13
-- On const shift to state 31

State 10:
expr -> IDENT . [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On VAR reduce production expr -> IDENT 
-- On THEN reduce production expr -> IDENT 
-- On SEMI reduce production expr -> IDENT 
-- On RSPAREN reduce production expr -> IDENT 
-- On RPAREN reduce production expr -> IDENT 
-- On PRINT reduce production expr -> IDENT 
-- On PLUS reduce production expr -> IDENT 
-- On OR reduce production expr -> IDENT 
-- On NOT reduce production expr -> IDENT 
-- On NEWLINE reduce production expr -> IDENT 
-- On NEQ reduce production expr -> IDENT 
-- On MULT reduce production expr -> IDENT 
-- On MINUS reduce production expr -> IDENT 
-- On LT reduce production expr -> IDENT 
-- On LSPAREN reduce production expr -> IDENT 
-- On LPAREN reduce production expr -> IDENT 
-- On LE reduce production expr -> IDENT 
-- On IF reduce production expr -> IDENT 
-- On IDENT reduce production expr -> IDENT 
-- On GT reduce production expr -> IDENT 
-- On GE reduce production expr -> IDENT 
-- On EXIT reduce production expr -> IDENT 
-- On EQ reduce production expr -> IDENT 
-- On EOF reduce production expr -> IDENT 
-- On END reduce production expr -> IDENT 
-- On ELSE reduce production expr -> IDENT 
-- On DIV reduce production expr -> IDENT 
-- On CONST_INT reduce production expr -> IDENT 
-- On CONST_BOOL reduce production expr -> IDENT 
-- On BEGIN reduce production expr -> IDENT 
-- On AND reduce production expr -> IDENT 

State 11:
const -> CONST_INT . [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On VAR reduce production const -> CONST_INT 
-- On THEN reduce production const -> CONST_INT 
-- On SEMI reduce production const -> CONST_INT 
-- On RSPAREN reduce production const -> CONST_INT 
-- On RPAREN reduce production const -> CONST_INT 
-- On PRINT reduce production const -> CONST_INT 
-- On PLUS reduce production const -> CONST_INT 
-- On OR reduce production const -> CONST_INT 
-- On NOT reduce production const -> CONST_INT 
-- On NEWLINE reduce production const -> CONST_INT 
-- On NEQ reduce production const -> CONST_INT 
-- On MULT reduce production const -> CONST_INT 
-- On MINUS reduce production const -> CONST_INT 
-- On LT reduce production const -> CONST_INT 
-- On LSPAREN reduce production const -> CONST_INT 
-- On LPAREN reduce production const -> CONST_INT 
-- On LE reduce production const -> CONST_INT 
-- On IF reduce production const -> CONST_INT 
-- On IDENT reduce production const -> CONST_INT 
-- On GT reduce production const -> CONST_INT 
-- On GE reduce production const -> CONST_INT 
-- On EXIT reduce production const -> CONST_INT 
-- On EQ reduce production const -> CONST_INT 
-- On EOF reduce production const -> CONST_INT 
-- On END reduce production const -> CONST_INT 
-- On ELSE reduce production const -> CONST_INT 
-- On DIV reduce production const -> CONST_INT 
-- On CONST_INT reduce production const -> CONST_INT 
-- On CONST_BOOL reduce production const -> CONST_INT 
-- On BEGIN reduce production const -> CONST_INT 
-- On AND reduce production const -> CONST_INT 

State 12:
const -> CONST_BOOL . [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On VAR reduce production const -> CONST_BOOL 
-- On THEN reduce production const -> CONST_BOOL 
-- On SEMI reduce production const -> CONST_BOOL 
-- On RSPAREN reduce production const -> CONST_BOOL 
-- On RPAREN reduce production const -> CONST_BOOL 
-- On PRINT reduce production const -> CONST_BOOL 
-- On PLUS reduce production const -> CONST_BOOL 
-- On OR reduce production const -> CONST_BOOL 
-- On NOT reduce production const -> CONST_BOOL 
-- On NEWLINE reduce production const -> CONST_BOOL 
-- On NEQ reduce production const -> CONST_BOOL 
-- On MULT reduce production const -> CONST_BOOL 
-- On MINUS reduce production const -> CONST_BOOL 
-- On LT reduce production const -> CONST_BOOL 
-- On LSPAREN reduce production const -> CONST_BOOL 
-- On LPAREN reduce production const -> CONST_BOOL 
-- On LE reduce production const -> CONST_BOOL 
-- On IF reduce production const -> CONST_BOOL 
-- On IDENT reduce production const -> CONST_BOOL 
-- On GT reduce production const -> CONST_BOOL 
-- On GE reduce production const -> CONST_BOOL 
-- On EXIT reduce production const -> CONST_BOOL 
-- On EQ reduce production const -> CONST_BOOL 
-- On EOF reduce production const -> CONST_BOOL 
-- On END reduce production const -> CONST_BOOL 
-- On ELSE reduce production const -> CONST_BOOL 
-- On DIV reduce production const -> CONST_BOOL 
-- On CONST_INT reduce production const -> CONST_BOOL 
-- On CONST_BOOL reduce production const -> CONST_BOOL 
-- On BEGIN reduce production const -> CONST_BOOL 
-- On AND reduce production const -> CONST_BOOL 

State 13:
expr -> expr . LSPAREN expr RSPAREN [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . PLUS expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . MINUS expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . MULT expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . DIV expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . AND expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . OR expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . EQ expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . NEQ expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . LT expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . LE expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . GT expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> expr . GE expr [ THEN PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ DIV AND ]
expr -> IF expr . THEN expr ELSE expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On THEN shift to state 14
-- On PLUS shift to state 16
-- On OR shift to state 23
-- On NEQ shift to state 25
-- On MULT shift to state 18
-- On MINUS shift to state 27
-- On LT shift to state 32
-- On LSPAREN shift to state 20
-- On LE shift to state 34
-- On GT shift to state 36
-- On GE shift to state 38
-- On EQ shift to state 40
-- On DIV shift to state 29
-- On AND shift to state 42

State 14:
expr -> IF expr THEN . expr ELSE expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 15
-- On const shift to state 31

State 15:
expr -> expr . LSPAREN expr RSPAREN [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . PLUS expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . MINUS expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . MULT expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . DIV expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . AND expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . OR expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . EQ expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . NEQ expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . LT expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . LE expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . GT expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> expr . GE expr [ PLUS OR NEQ MULT MINUS LT LSPAREN LE GT GE EQ ELSE DIV AND ]
expr -> IF expr THEN expr . ELSE expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On PLUS shift to state 16
-- On OR shift to state 23
-- On NEQ shift to state 25
-- On MULT shift to state 18
-- On MINUS shift to state 27
-- On LT shift to state 32
-- On LSPAREN shift to state 20
-- On LE shift to state 34
-- On GT shift to state 36
-- On GE shift to state 38
-- On EQ shift to state 40
-- On ELSE shift to state 44
-- On DIV shift to state 29
-- On AND shift to state 42

State 16:
expr -> expr PLUS . expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 17
-- On const shift to state 31

State 17:
expr -> expr . LSPAREN expr RSPAREN [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . PLUS expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr PLUS expr . [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . MINUS expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . MULT expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . DIV expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . AND expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . OR expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . EQ expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . NEQ expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . LT expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . LE expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . GT expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
expr -> expr . GE expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On MULT shift to state 18
-- On LSPAREN shift to state 20
-- On DIV shift to state 29
-- On VAR reduce production expr -> expr PLUS expr 
-- On THEN reduce production expr -> expr PLUS expr 
-- On SEMI reduce production expr -> expr PLUS expr 
-- On RSPAREN reduce production expr -> expr PLUS expr 
-- On RPAREN reduce production expr -> expr PLUS expr 
-- On PRINT reduce production expr -> expr PLUS expr 
-- On PLUS reduce production expr -> expr PLUS expr 
-- On OR reduce production expr -> expr PLUS expr 
-- On NOT reduce production expr -> expr PLUS expr 
-- On NEWLINE reduce production expr -> expr PLUS expr 
-- On NEQ reduce production expr -> expr PLUS expr 
-- On MINUS reduce production expr -> expr PLUS expr 
-- On LT reduce production expr -> expr PLUS expr 
-- On LPAREN reduce production expr -> expr PLUS expr 
-- On LE reduce production expr -> expr PLUS expr 
-- On IF reduce production expr -> expr PLUS expr 
-- On IDENT reduce production expr -> expr PLUS expr 
-- On GT reduce production expr -> expr PLUS expr 
-- On GE reduce production expr -> expr PLUS expr 
-- On EXIT reduce production expr -> expr PLUS expr 
-- On EQ reduce production expr -> expr PLUS expr 
-- On EOF reduce production expr -> expr PLUS expr 
-- On END reduce production expr -> expr PLUS expr 
-- On ELSE reduce production expr -> expr PLUS expr 
-- On CONST_INT reduce production expr -> expr PLUS expr 
-- On CONST_BOOL reduce production expr -> expr PLUS expr 
-- On BEGIN reduce production expr -> expr PLUS expr 
-- On AND reduce production expr -> expr PLUS expr 

State 18:
expr -> expr MULT . expr [ VAR THEN SEMI RSPAREN RPAREN PRINT PLUS OR NOT NEWLINE NEQ MULT MINUS LT LSPAREN LPAREN LE IF IDENT GT GE EXIT EQ EOF END ELSE DIV CONST_INT CONST_BOOL BEGIN AND ]
-- On NOT shift to state 5
-- On MINUS shift to state 6
-- On LSPAREN shift to state 7
-- On LPAREN shift to state 8
-- On IF shift to state 9
-- On IDENT shift to state 10
-- On CONST_INT shift to state 11
-- On CONST_BOOL shift to state 12
-- On expr shift to state 19
-- On const shift to state 31
